Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,7 @@ h2, a {
 a:hover {
     color: black;
 }
+
+.left {
+    float: left;
+}
